--- a/localconfig.json
+++ b/localconfig.json
@@ -1,5 +1,5 @@
 {
     "serverName": "localhost:8888/",
-    "subDirectory": "Perso/NewProject",
+    "subDirectory": "Perso/LuchosFrontFramework",
     "enableBrowserSync": true
 }
