--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "LuchosFrontFramework",
   "version": "1.0.0",
   "description": "Front-End Framework providing a modular architecture",
-  "keywords" : ["Module", "SMACSS", "ES6", "Hetic"],
+  "keywords": [
+    "Module",
+    "SMACSS",
+    "ES6",
+    "Hetic"
+  ],
   "main": "README.md",
   "author": {
     "name": "Louis Chenais",
@@ -20,10 +25,10 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-cached": "^1.1.0",
+    "gulp-clean-css": "^2.0.7",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-clean-css": "^2.0.7",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-scss-lint": "^0.2.0",
@@ -32,7 +37,7 @@
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.1.0",
-    "gulp-uncss": "^1.0.2",
+    "gulp-uncss": "^1.0.5",
     "imagemin-pngquant": "^4.0.0",
     "sassdoc": "^2.1.15",
     "svg4everybody": "^2.0.3"
