--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-scss-lint": "^0.2.0",
     "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.1",
+    "gulp-strip-css-comments": "^1.2.0",
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.1.0",
