--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-scss-lint": "^0.2.0",
