--- a/package.json
+++ b/package.json
@@ -20,28 +20,31 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.3.1",
+    "browser-sync": "^2.12.3",
     "critical": "^0.6.0",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
-    "gulp-clean-css": "^2.0.7",
+    "gulp-clean-css": "^2.0.11",
     "gulp-concat": "^2.6.0",
-    "gulp-imagemin": "^2.2.1",
+    "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "^2.3.1",
     "gulp-scss-lint": "^0.2.0",
-    "gulp-size": "^1.2.1",
-    "gulp-sourcemaps": "^1.5.1",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-css-comments": "^1.2.0",
     "gulp-svgmin": "^1.2.2",
-    "gulp-svgstore": "^5.0.5",
-    "gulp-uglify": "^1.1.0",
+    "gulp-svgstore": "^6.0.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-uncss": "^1.0.5",
+    "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.0.0",
-    "sassdoc": "^2.1.15",
-    "svg4everybody": "^2.0.3"
+    "postcss-scss": "^0.1.9",
+    "sassdoc": "^2.1.20",
+    "svg4everybody": "^2.1.0"
   }
 }
