--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-cached": "^1.1.0",
     "gulp-clean-css": "^2.0.11",
     "gulp-concat": "^2.6.0",
+    "gulp-dom": "^0.9.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-plumber": "^1.1.0",
