--- a/package.json
+++ b/package.json
@@ -22,35 +22,36 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.12.3",
-    "critical": "^0.8.0",
-    "del": "^2.2.2",
+    "browser-sync": "^2.18.13",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-cached": "^1.1.0",
-    "gulp-changed": "^1.3.2",
-    "gulp-clean-css": "^2.0.11",
+    "gulp-changed": "^3.1.0",
+    "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-dom": "^0.9.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.1.1",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
-    "gulp-scss-lint": "^0.4.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-scss-lint": "^0.5.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-strip-css-comments": "^1.2.0",
     "gulp-svg2png": "^2.0.2",
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.5",
     "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^5.0.0",
     "sassdoc": "^2.1.20",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-no-unsupported-browser-features": "^1.0.1",
     "svg2png": "^4.0.0",
-    "svg4everybody": "^2.1.0"
+    "svg4everybody": "^2.1.9"
   }
 }
