--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,13 +4,13 @@
     "stylelint-no-unsupported-browser-features"
   ],
   "rules": {
-    "at-rule-no-vendor-prefix": "true",
-    "media-feature-name-no-vendor-prefix": "true",
-    "property-no-vendor-prefix": "true",
-    "selector-no-vendor-prefix": "true",
-    "value-no-vendor-prefix": "true",
-    "declaration-empty-line-before": "false",
-    "at-rule-empty-line-before": "false",
+    "at-rule-no-vendor-prefix": true,
+    "media-feature-name-no-vendor-prefix": true,
+    "property-no-vendor-prefix": true,
+    "selector-no-vendor-prefix": true,
+    "value-no-vendor-prefix": true,
+    "declaration-empty-line-before": "never",
+    "at-rule-empty-line-before": "never",
     "plugin/no-unsupported-browser-features": [true, {
       "browsers": ['> 1%', 'Last 2 versions'],
       "ignore": ['rem']
