--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LuchosFrontFramework",
+  "name": "luchos-front-framework",
   "version": "1.0.0",
   "description": "Front-End Framework providing a modular architecture",
   "keywords": [
@@ -32,13 +32,12 @@
     "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.0",
     "gulp-dom": "^0.9.0",
-    "gulp-load-plugins": "^1.3.0",
     "gulp-imagemin": "^4.1.0",
+    "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-scss-lint": "^0.6.1",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-css-comments": "^2.0.0",
@@ -50,9 +49,16 @@
     "gulp-util": "^3.0.8",
     "imagemin-pngquant": "^5.0.1",
     "sassdoc": "^2.1.20",
+    "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-no-unsupported-browser-features": "^2.0.0",
+    "stylelint-scss": "^2.3.0",
     "svg2png": "^4.1.1",
     "svg4everybody": "^2.1.9"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "Android"
+  ]
 }
