--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.1.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-uncss": "^1.0.5",
     "gulp-util": "^3.0.8",
     "imagemin-pngquant": "^5.0.1",
+    "postcss-uncss": "^0.16.1",
+    "uncss": "^0.16.2",
     "sassdoc": "^2.1.20",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
@@ -57,8 +58,6 @@
     "svg4everybody": "^2.1.9"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "Android"
+    ">0.25%"
   ]
 }
