--- a/.specifyrc.json
+++ b/.specifyrc.json
@@ -1,27 +1,35 @@
 {
-  "repository": "@hetic/G01-E08-Light",
+  "repository": "@specifyapp/Specify-Demo",
   "rules": [
     {
-      "path": "src/assets/styles/01-utils/variables/colors/_light-theme.scss",
-      "filter":{
-          "types": ["color"]
+      "path": "assets/styles/colors.css",
+      "filter": {
+        "types": ["color"]
       },
       "parsers": [
-          {
-              "name": "kebabcasify",
-              "options": {
-                  "keys": ["name"]
-              }
-          },
-          {
-              "name": "to-css-custom-properties",
-              "options": {
-                "formatConfig": {
-                  "selector": ":root[data-theme='light']"
-                }
-              }
+        {
+          "name": "kebabcasify",
+          "options": {
+            "keys": ["name"]
           }
-          
+        },
+        {
+          "name": "to-css-custom-properties"
+        }
+      ]
+    },
+    {
+      "path": "assets/",
+      "filter": {
+        "types": ["vector"]
+      },
+      "parsers": [
+        {
+          "name": "kebabcasify",
+          "options": {
+            "keys": ["name"]
+          }
+        }
       ]
     }
   ]
